gen/com/freedomcoder/apigen/parser/apilang/ApilangParser.java
// Generated from /Users/freedomcoder/Projects/APIMator/src/com/freedomcoder/apigen/parser/apilang/Apilang.g4 by ANTLR 4.9.2
package com.freedomcoder.apigen.parser.apilang;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ApilangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, ASSIGN=3, LT=4, GT=5, OPAR=6, CPAR=7, OBRACE=8, CBRACE=9, 
		LBRACK=10, RBRACK=11, SEMI=12, COMMA=13, DOT=14, IMPORT=15, API=16, GROUP=17, 
		METHOD=18, OBJECT=19, THROWS=20, ERROR=21, PUBLIC=22, PRIVATE=23, TRUE=24, 
		FALSE=25, NULL=26, ARRBRACK=27, ID=28, INT=29, FLOAT=30, DESCRIPTION=31, 
		STRING=32, COMMENT=33, LINE_COMMENT=34, SPACE=35, OTHER=36;
	public static final int
		RULE_parse = 0, RULE_importDeclaration = 1, RULE_typeDeclaration = 2, 
		RULE_typeModifier = 3, RULE_objectDeclaration = 4, RULE_apiDeclaration = 5, 
		RULE_apiTypeDeclaration = 6, RULE_apiGroupDeclaration = 7, RULE_apiMethodDeclaration = 8, 
		RULE_throwsDeclaration = 9, RULE_throwsDeclaratorList = 10, RULE_responseDeclaration = 11, 
		RULE_extFieldDeclaration = 12, RULE_inlineObjectDeclaration = 13, RULE_fieldDeclaration = 14, 
		RULE_inlineTypeName = 15, RULE_fieldModifier = 16, RULE_variableDeclaratorList = 17, 
		RULE_variableDeclarator = 18, RULE_annotation = 19, RULE_normalAnnotation = 20, 
		RULE_elementValuePairList = 21, RULE_elementValuePair = 22, RULE_elementValue = 23, 
		RULE_elementValueArrayInitializer = 24, RULE_elementValueList = 25, RULE_markerAnnotation = 26, 
		RULE_singleElementAnnotation = 27, RULE_atom = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "importDeclaration", "typeDeclaration", "typeModifier", "objectDeclaration", 
			"apiDeclaration", "apiTypeDeclaration", "apiGroupDeclaration", "apiMethodDeclaration", 
			"throwsDeclaration", "throwsDeclaratorList", "responseDeclaration", "extFieldDeclaration", 
			"inlineObjectDeclaration", "fieldDeclaration", "inlineTypeName", "fieldModifier", 
			"variableDeclaratorList", "variableDeclarator", "annotation", "normalAnnotation", 
			"elementValuePairList", "elementValuePair", "elementValue", "elementValueArrayInitializer", 
			"elementValueList", "markerAnnotation", "singleElementAnnotation", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'protected'", "'@'", "'='", "'<'", "'>'", "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "';'", "','", "'.'", "'import'", "'api'", "'group'", 
			"'method'", "'object'", "'throws'", "'error'", "'public'", "'private'", 
			"'true'", "'false'", "'null'", "'[]'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "ASSIGN", "LT", "GT", "OPAR", "CPAR", "OBRACE", "CBRACE", 
			"LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "IMPORT", "API", "GROUP", 
			"METHOD", "OBJECT", "THROWS", "ERROR", "PUBLIC", "PRIVATE", "TRUE", "FALSE", 
			"NULL", "ARRBRACK", "ID", "INT", "FLOAT", "DESCRIPTION", "STRING", "COMMENT", 
			"LINE_COMMENT", "SPACE", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Apilang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ApilangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ApilangParser.EOF, 0); }
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApilangVisitor ) return ((ApilangVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(58);
				importDeclaration();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << API) | (1L << OBJECT) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(64);
				typeDeclaration();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(ApilangParser.IMPORT, 0); }
		public TerminalNode STRING() { return getToken(ApilangParser.STRING, 0); }
		public TerminalNode SEMI() { return getToken(ApilangParser.SEMI, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).exitImportDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApilangVisitor ) return ((ApilangVisitor<? extends T>)visitor).visitImportDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(IMPORT);
			setState(73);
			match(STRING);
			setState(74);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclarationContext extends ParserRuleContext {
		public ApiDeclarationContext apiDeclaration() {
			return getRuleContext(ApiDeclarationContext.class,0);
		}
		public ObjectDeclarationContext objectDeclaration() {
			return getRuleContext(ObjectDeclarationContext.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).enterTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).exitTypeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApilangVisitor ) return ((ApilangVisitor<? extends T>)visitor).visitTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDeclaration);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				apiDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				objectDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeModifierContext extends ParserRuleContext {
		public AnnotationContext annotation() {
			return getRuleContext(AnnotationContext.class,0);
		}
		public TerminalNode PUBLIC() { return getToken(ApilangParser.PUBLIC, 0); }
		public TerminalNode PRIVATE() { return getToken(ApilangParser.PRIVATE, 0); }
		public TypeModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).enterTypeModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).exitTypeModifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApilangVisitor ) return ((ApilangVisitor<? extends T>)visitor).visitTypeModifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeModifierContext typeModifier() throws RecognitionException {
		TypeModifierContext _localctx = new TypeModifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeModifier);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				annotation();
				}
				break;
			case PUBLIC:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				match(PUBLIC);
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				match(T__0);
				}
				break;
			case PRIVATE:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				match(PRIVATE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectDeclarationContext extends ParserRuleContext {
		public TerminalNode OBJECT() { return getToken(ApilangParser.OBJECT, 0); }
		public TerminalNode ID() { return getToken(ApilangParser.ID, 0); }
		public TerminalNode OBRACE() { return getToken(ApilangParser.OBRACE, 0); }
		public TerminalNode CBRACE() { return getToken(ApilangParser.CBRACE, 0); }
		public List<TypeModifierContext> typeModifier() {
			return getRuleContexts(TypeModifierContext.class);
		}
		public TypeModifierContext typeModifier(int i) {
			return getRuleContext(TypeModifierContext.class,i);
		}
		public List<ExtFieldDeclarationContext> extFieldDeclaration() {
			return getRuleContexts(ExtFieldDeclarationContext.class);
		}
		public ExtFieldDeclarationContext extFieldDeclaration(int i) {
			return getRuleContext(ExtFieldDeclarationContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(ApilangParser.SEMI, 0); }
		public TerminalNode DESCRIPTION() { return getToken(ApilangParser.DESCRIPTION, 0); }
		public ObjectDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).enterObjectDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).exitObjectDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApilangVisitor ) return ((ApilangVisitor<? extends T>)visitor).visitObjectDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectDeclarationContext objectDeclaration() throws RecognitionException {
		ObjectDeclarationContext _localctx = new ObjectDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_objectDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(86);
				typeModifier();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(OBJECT);
			setState(93);
			match(ID);
			setState(94);
			match(OBRACE);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << ID))) != 0)) {
				{
				{
				setState(95);
				extFieldDeclaration();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(CBRACE);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(102);
				match(SEMI);
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DESCRIPTION) {
				{
				setState(105);
				match(DESCRIPTION);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ApiDeclarationContext extends ParserRuleContext {
		public TerminalNode API() { return getToken(ApilangParser.API, 0); }
		public TerminalNode ID() { return getToken(ApilangParser.ID, 0); }
		public TerminalNode OBRACE() { return getToken(ApilangParser.OBRACE, 0); }
		public TerminalNode CBRACE() { return getToken(ApilangParser.CBRACE, 0); }
		public List<TypeModifierContext> typeModifier() {
			return getRuleContexts(TypeModifierContext.class);
		}
		public TypeModifierContext typeModifier(int i) {
			return getRuleContext(TypeModifierContext.class,i);
		}
		public List<ApiTypeDeclarationContext> apiTypeDeclaration() {
			return getRuleContexts(ApiTypeDeclarationContext.class);
		}
		public ApiTypeDeclarationContext apiTypeDeclaration(int i) {
			return getRuleContext(ApiTypeDeclarationContext.class,i);
		}
		public ApiDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_apiDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).enterApiDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).exitApiDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApilangVisitor ) return ((ApilangVisitor<? extends T>)visitor).visitApiDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApiDeclarationContext apiDeclaration() throws RecognitionException {
		ApiDeclarationContext _localctx = new ApiDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_apiDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(108);
				typeModifier();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(API);
			setState(115);
			match(ID);
			setState(116);
			match(OBRACE);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << GROUP) | (1L << METHOD) | (1L << OBJECT) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(117);
				apiTypeDeclaration();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ApiTypeDeclarationContext extends ParserRuleContext {
		public ApiGroupDeclarationContext apiGroupDeclaration() {
			return getRuleContext(ApiGroupDeclarationContext.class,0);
		}
		public ApiMethodDeclarationContext apiMethodDeclaration() {
			return getRuleContext(ApiMethodDeclarationContext.class,0);
		}
		public ObjectDeclarationContext objectDeclaration() {
			return getRuleContext(ObjectDeclarationContext.class,0);
		}
		public ApiTypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_apiTypeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).enterApiTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).exitApiTypeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApilangVisitor ) return ((ApilangVisitor<? extends T>)visitor).visitApiTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApiTypeDeclarationContext apiTypeDeclaration() throws RecognitionException {
		ApiTypeDeclarationContext _localctx = new ApiTypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_apiTypeDeclaration);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				apiGroupDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				apiMethodDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				objectDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ApiGroupDeclarationContext extends ParserRuleContext {
		public TerminalNode GROUP() { return getToken(ApilangParser.GROUP, 0); }
		public TerminalNode ID() { return getToken(ApilangParser.ID, 0); }
		public TerminalNode OBRACE() { return getToken(ApilangParser.OBRACE, 0); }
		public TerminalNode CBRACE() { return getToken(ApilangParser.CBRACE, 0); }
		public List<TypeModifierContext> typeModifier() {
			return getRuleContexts(TypeModifierContext.class);
		}
		public TypeModifierContext typeModifier(int i) {
			return getRuleContext(TypeModifierContext.class,i);
		}
		public ThrowsDeclarationContext throwsDeclaration() {
			return getRuleContext(ThrowsDeclarationContext.class,0);
		}
		public List<ApiTypeDeclarationContext> apiTypeDeclaration() {
			return getRuleContexts(ApiTypeDeclarationContext.class);
		}
		public ApiTypeDeclarationContext apiTypeDeclaration(int i) {
			return getRuleContext(ApiTypeDeclarationContext.class,i);
		}
		public ApiGroupDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_apiGroupDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).enterApiGroupDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).exitApiGroupDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApilangVisitor ) return ((ApilangVisitor<? extends T>)visitor).visitApiGroupDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ApiGroupDeclarationContext apiGroupDeclaration() throws RecognitionException {
		ApiGroupDeclarationContext _localctx = new ApiGroupDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_apiGroupDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(130);
				typeModifier();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			match(GROUP);
			setState(137);
			match(ID);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THROWS) {
				{
				setState(138);
				throwsDeclaration();
				}
			}

			setState(141);
			match(OBRACE);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << GROUP) | (1L << METHOD) | (1L << OBJECT) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(142);
				apiTypeDeclaration();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(CBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ApiMethodDeclarationContext extends ParserRuleContext {
		public TerminalNode METHOD() { return getToken(ApilangParser.METHOD, 0); }
		public TerminalNode ID() { return getToken(ApilangParser.ID, 0); }
		public TerminalNode OPAR() { return getToken(ApilangParser.OPAR, 0); }
		public TerminalNode CPAR() { return getToken(ApilangParser.CPAR, 0); }
		public TerminalNode OBRACE() { return getToken(ApilangParser.OBRACE, 0); }
		public TerminalNode CBRACE() { return getToken(ApilangParser.CBRACE, 0); }
		public List<TypeModifierContext> typeModifier() {
			return getRuleContexts(TypeModifierContext.class);
		}
		public TypeModifierContext typeModifier(int i) {
			return getRuleContext(TypeModifierContext.class,i);
		}
		public ThrowsDeclarationContext throwsDeclaration() {
			return getRuleContext(ThrowsDeclarationContext.class,0);
		}
		public List<FieldDeclarationContext> fieldDeclaration() {
			return getRuleContexts(FieldDeclarationContext.class);
		}
		public FieldDeclarationContext fieldDeclaration(int i) {
			return getRuleContext(FieldDeclarationContext.class,i);
		}
		public List<ResponseDeclarationContext> responseDeclaration() {
			return getRuleContexts(ResponseDeclarationContext.class);
		}
		public ResponseDeclarationContext responseDeclaration(int i) {
			return getRuleContext(ResponseDeclarationContext.class,i);
		}
		public ApiMethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_apiMethodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).enterApiMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ApilangListener ) ((ApilangListener)listener).exitApiMethodDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ApilangVisitor ) return ((ApilangVisitor<? extends T>)visitor).visitApiMethodDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
